--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 offline/*
+.idea/.name
+.idea/encodings.xml
+.idea/micropolar.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/scopes/scope_settings.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
