--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 .idea/inspectionProfiles/Project_Default.xml
 .idea/scopes/scope_settings.xml
 .idea/workspace.xml
+.idea/encodings.xml
+.idea/micropolar.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+examples/test.csv
+src/makefile
