--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
 offline/*
-.idea/.name
-.idea/encodings.xml
-.idea/micropolar.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/scopes/scope_settings.xml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/inspectionProfiles/Project_Default.xml
-src/makefile
-examples/test.csv
-examples.html
+.idea/*
 codeStyleSettings.xml
